--- a/style-editor.css
+++ b/style-editor.css
@@ -1625,6 +1625,10 @@ body {
   bottom: 40px;
 }
 
+.-top-36 {
+  top: -9rem;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -1685,6 +1689,16 @@ body {
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.mx-12 {
+  margin-left: 3rem;
+  margin-right: 3rem;
 }
 
 .mr-2 {
@@ -1799,6 +1813,22 @@ body {
   margin-left: 30px;
 }
 
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
+.mr-8 {
+  margin-right: 2rem;
+}
+
+.-mt-12 {
+  margin-top: -3rem;
+}
+
 .block {
   display: block;
 }
@@ -1879,6 +1909,14 @@ body {
   height: 6rem;
 }
 
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
 .min-h-full {
   min-height: 100%;
 }
@@ -1933,6 +1971,10 @@ body {
 
 .w-24 {
   width: 6rem;
+}
+
+.w-2\/5 {
+  width: 40%;
 }
 
 .min-w-\[193px\] {
@@ -2003,6 +2045,14 @@ body {
   max-width: 420px;
 }
 
+.max-w-7xl {
+  max-width: 80rem;
+}
+
+.flex-1 {
+  flex: 1 1 0%;
+}
+
 .grow {
   flex-grow: 1;
 }
@@ -2036,6 +2086,10 @@ body {
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -2166,6 +2220,10 @@ body {
   border-width: 2px;
 }
 
+.border-8 {
+  border-width: 8px;
+}
+
 .border-l-2 {
   border-left-width: 2px;
 }
@@ -2238,6 +2296,11 @@ body {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#EFF3F9\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 243 249 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-\[0\.25\] {
   --tw-bg-opacity: 0.25;
 }
@@ -2304,6 +2367,10 @@ body {
 
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-8 {
+  padding: 2rem;
 }
 
 .px-3 {
@@ -2391,6 +2458,11 @@ body {
   padding-right: 1.75rem !important;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -2473,6 +2545,10 @@ body {
 
 .pl-\[55px\] {
   padding-left: 55px;
+}
+
+.pb-48 {
+  padding-bottom: 12rem;
 }
 
 .text-left {
@@ -2571,12 +2647,21 @@ body {
   color: rgb(113 113 113 / var(--tw-text-opacity));
 }
 
+.text-\[\#5433ED\] {
+  --tw-text-opacity: 1;
+  color: rgb(84 51 237 / var(--tw-text-opacity));
+}
+
 .opacity-100 {
   opacity: 1;
 }
 
 .opacity-20 {
   opacity: 0.2;
+}
+
+.opacity-0 {
+  opacity: 0;
 }
 
 .shadow-sm {
@@ -2655,7 +2740,21 @@ body {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.active\:border-secondary:active {
+  --tw-border-opacity: 1;
+  border-color: rgb(43 212 217 / var(--tw-border-opacity));
+}
+
+.active\:bg-secondary:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 212 217 / var(--tw-bg-opacity));
+}
+
 @media (min-width: 640px) {
+  .sm\:w-4\/5 {
+    width: 80%;
+  }
+
   .sm\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -2967,6 +3066,10 @@ body {
     bottom: 80px;
   }
 
+  .lg\:-left-\[14\%\] {
+    left: -14%;
+  }
+
   .lg\:m-0 {
     margin: 0px;
   }
@@ -3008,8 +3111,28 @@ body {
     margin-top: 10rem;
   }
 
+  .lg\:mt-28 {
+    margin-top: 7rem;
+  }
+
+  .lg\:-mt-20 {
+    margin-top: -5rem;
+  }
+
+  .lg\:-mt-16 {
+    margin-top: -4rem;
+  }
+
+  .lg\:mr-8 {
+    margin-right: 2rem;
+  }
+
   .lg\:block {
     display: block;
+  }
+
+  .lg\:flex {
+    display: flex;
   }
 
   .lg\:aspect-\[16\/10\.7\] {
@@ -3018,6 +3141,10 @@ body {
 
   .lg\:aspect-\[16\/11\.5\] {
     aspect-ratio: 16/11.5;
+  }
+
+  .lg\:h-24 {
+    height: 6rem;
   }
 
   .lg\:w-4\/12 {
@@ -3056,12 +3183,28 @@ body {
     width: 45%;
   }
 
+  .lg\:w-\[113\%\] {
+    width: 113%;
+  }
+
+  .lg\:w-24 {
+    width: 6rem;
+  }
+
+  .lg\:w-2\/5 {
+    width: 40%;
+  }
+
   .lg\:max-w-max-content {
     max-width: 1232px;
   }
 
   .lg\:max-w-\[300px\] {
     max-width: 300px;
+  }
+
+  .lg\:max-w-\[72\%\] {
+    max-width: 72%;
   }
 
   .lg\:grid-cols-4 {
@@ -3076,8 +3219,16 @@ body {
     flex-direction: row-reverse;
   }
 
+  .lg\:flex-col {
+    flex-direction: column;
+  }
+
   .lg\:gap-32 {
     gap: 8rem;
+  }
+
+  .lg\:gap-28 {
+    gap: 7rem;
   }
 
   .lg\:rounded-none {
@@ -3090,6 +3241,10 @@ body {
 
   .lg\:p-6 {
     padding: 1.5rem;
+  }
+
+  .lg\:p-16 {
+    padding: 4rem;
   }
 
   .lg\:px-8 {
@@ -3110,6 +3265,11 @@ body {
   .lg\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
+  }
+
+  .lg\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .lg\:pr-28 {
@@ -3140,6 +3300,14 @@ body {
     padding-left: 0px;
   }
 
+  .lg\:pl-16 {
+    padding-left: 4rem;
+  }
+
+  .lg\:pl-6 {
+    padding-left: 1.5rem;
+  }
+
   .lg\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -3162,6 +3330,11 @@ body {
   .lg\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
@@ -3668,6 +3841,30 @@ body {
     margin-top: 14rem;
   }
 
+  .xl\:mt-40 {
+    margin-top: 10rem;
+  }
+
+  .xl\:mt-44 {
+    margin-top: 11rem;
+  }
+
+  .xl\:mt-28 {
+    margin-top: 7rem;
+  }
+
+  .xl\:mt-32 {
+    margin-top: 8rem;
+  }
+
+  .xl\:mt-24 {
+    margin-top: 6rem;
+  }
+
+  .xl\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .xl\:block {
     display: block;
   }
@@ -3698,6 +3895,10 @@ body {
 
   .xl\:w-12 {
     width: 3rem;
+  }
+
+  .xl\:w-6\/12 {
+    width: 50%;
   }
 
   .xl\:max-w-\[420px\] {
@@ -3744,6 +3945,10 @@ body {
 
   .xl\:pb-0 {
     padding-bottom: 0px;
+  }
+
+  .xl\:pr-28 {
+    padding-right: 7rem;
   }
 
   .xl\:text-left {
