--- a/assets/custom.css
+++ b/assets/custom.css
@@ -5,6 +5,7 @@ h4,
 h5,
 h6,
 p,
+li,
 a {
   font-family: Nunito, sans-serif;
 }
@@ -133,40 +134,6 @@ span.playIcon::before {
   display: none !important;
 }
 
-.hs1_container {
-  min-height: 680px;
-}
-
-@media screen and (min-width: 750px) {
-  .hs1_container {
-    min-height: 950px;
-  }
-}
-
-@media screen and (max-width: 750px) {
-  .hs1_container {
-    min-height: 850px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .hs1_container {
-    min-height: 750px;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .hs1_container {
-    min-height: 700px;
-  }
-}
-
-@media screen and (min-width: 1279px) {
-  .hs1_container {
-    min-height: 800px;
-  }
-}
-
 .home-sec6 {
   min-height: 615px;
   padding: 50px 0 240px;
@@ -197,5 +164,36 @@ span.playIcon::before {
 }
 
 .fs1_container {
-  min-height: 700px;
+  min-height: 800px;
+}
+
+.pricing-list li:before {
+  content: "•";
+  color: #5433ed;
+  display: inline-block;
+  width: 1em;
+}
+
+.move {
+  transform: translateX(80px);
+}
+
+.s_pricing {
+  position: relative;
+  overflow: hidden;
+  padding-bottom: 150px;
+  border-bottom-right-radius: 40px;
+  border-bottom-left-radius: 80px;
+}
+
+.s_pricing:after {
+  position: absolute;
+  content: " ";
+  display: block;
+  left: -5%;
+  bottom: -50px;
+  transform: rotate(2deg);
+  height: 80px;
+  width: 110%;
+  background: white;
 }
