--- a/style-editor.css
+++ b/style-editor.css
@@ -1637,6 +1637,38 @@ body {
   top: 50%;
 }
 
+.top-\[70pz\] {
+  top: 70pz;
+}
+
+.top-\[70p\] {
+  top: 70p;
+}
+
+.top-\[70px\] {
+  top: 70px;
+}
+
+.top-\[0\] {
+  top: 0;
+}
+
+.top-\[60px\] {
+  top: 60px;
+}
+
+.top-20 {
+  top: 5rem;
+}
+
+.bottom-20 {
+  bottom: 5rem;
+}
+
+.top-32 {
+  top: 8rem;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -1711,6 +1743,11 @@ body {
 .mx-12 {
   margin-left: 3rem;
   margin-right: 3rem;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .mr-2 {
@@ -1853,6 +1890,30 @@ body {
   margin-left: 1.5rem;
 }
 
+.mt-\[\] {
+  margin-top: ;
+}
+
+.mt-\[70px\] {
+  margin-top: 70px;
+}
+
+.mt-\[120px\] {
+  margin-top: 120px;
+}
+
+.mr-0 {
+  margin-right: 0px;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mr-3 {
+  margin-right: 0.75rem;
+}
+
 .block {
   display: block;
 }
@@ -1961,6 +2022,22 @@ body {
   height: 94vh;
 }
 
+.h-\[100vh\] {
+  height: 100vh;
+}
+
+.h-60 {
+  height: 15rem;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
 .min-h-full {
   min-height: 100%;
 }
@@ -2041,6 +2118,24 @@ body {
   width: 700px;
 }
 
+.w-fit {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-auto {
+  width: auto;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
 .min-w-\[193px\] {
   min-width: 193px;
 }
@@ -2117,6 +2212,14 @@ body {
   max-width: 42rem;
 }
 
+.max-w-\[500px\] {
+  max-width: 500px;
+}
+
+.max-w-\[650px\] {
+  max-width: 650px;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -2152,12 +2255,20 @@ body {
   cursor: pointer;
 }
 
+.list-none {
+  list-style-type: none;
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row {
   flex-direction: row;
+}
+
+.flex-row-reverse {
+  flex-direction: row-reverse;
 }
 
 .flex-col {
@@ -2280,6 +2391,11 @@ body {
   border-radius: 0.375rem;
 }
 
+.rounded-b-3xl {
+  border-bottom-right-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -2319,6 +2435,11 @@ body {
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-primary {
+  --tw-border-opacity: 1;
+  border-color: rgb(84 51 237 / var(--tw-border-opacity));
 }
 
 .border-opacity-60 {
@@ -2367,6 +2488,11 @@ body {
 .bg-\[\#EFF3F9\] {
   --tw-bg-opacity: 1;
   background-color: rgb(239 243 249 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#D1D9E6\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 217 230 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-\[0\.25\] {
@@ -2443,6 +2569,14 @@ body {
 
 .p-8 {
   padding: 2rem;
+}
+
+.p-1\.5 {
+  padding: 0.375rem;
+}
+
+.p-1 {
+  padding: 0.25rem;
 }
 
 .px-3 {
@@ -2631,6 +2765,62 @@ body {
   padding-top: 0.25rem;
 }
 
+.pt-24 {
+  padding-top: 6rem;
+}
+
+.pt-32 {
+  padding-top: 8rem;
+}
+
+.pt-48 {
+  padding-top: 12rem;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
+.pb-40 {
+  padding-bottom: 10rem;
+}
+
+.pb-\[100px\] {
+  padding-bottom: 100px;
+}
+
+.pb-\[150px\] {
+  padding-bottom: 150px;
+}
+
+.pt-40 {
+  padding-top: 10rem;
+}
+
+.pt-36 {
+  padding-top: 9rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2680,6 +2870,11 @@ body {
 
 .text-\[18px\] {
   font-size: 18px;
+}
+
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
 }
 
 .font-bold {
@@ -2777,6 +2972,11 @@ body {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.drop-shadow-\[55px_55px_69px_rgba\(0\2c 0\2c 0\2c 0\.1\)\] {
+  --tw-drop-shadow: drop-shadow(55px 55px 69px rgba(0,0,0,0.1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .transition-opacity {
   transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -2835,8 +3035,20 @@ body {
 }
 
 @media (min-width: 640px) {
+  .sm\:h-auto {
+    height: auto;
+  }
+
   .sm\:w-4\/5 {
     width: 80%;
+  }
+
+  .sm\:w-0\.5 {
+    width: 0.125rem;
+  }
+
+  .sm\:w-0 {
+    width: 0px;
   }
 
   .sm\:grid-cols-3 {
@@ -2847,6 +3059,14 @@ body {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .sm\:flex-row {
+    flex-direction: row;
+  }
+
+  .sm\:self-stretch {
+    align-self: stretch;
+  }
+
   .sm\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
@@ -2854,12 +3074,28 @@ body {
 }
 
 @media (min-width: 768px) {
+  .md\:top-14 {
+    top: 3.5rem;
+  }
+
   .md\:mb-8 {
     margin-bottom: 2rem;
   }
 
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .md\:mr-0 {
+    margin-right: 0px;
+  }
+
   .md\:block {
     display: block;
+  }
+
+  .md\:flex {
+    display: flex;
   }
 
   .md\:w-2\/3 {
@@ -2884,6 +3120,18 @@ body {
 
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
+  .md\:flex-col {
+    flex-direction: column;
+  }
+
+  .md\:items-center {
+    align-items: center;
   }
 
   .md\:gap-16 {
@@ -2923,6 +3171,14 @@ body {
     padding-bottom: 7rem;
   }
 
+  .md\:pr-16 {
+    padding-right: 4rem;
+  }
+
+  .md\:pl-16 {
+    padding-left: 4rem;
+  }
+
   .md\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -2936,6 +3192,11 @@ body {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
@@ -3178,6 +3439,14 @@ body {
     left: -7%;
   }
 
+  .lg\:top-0 {
+    top: 0px;
+  }
+
+  .lg\:top-\[50\%\] {
+    top: 50%;
+  }
+
   .lg\:m-0 {
     margin: 0px;
   }
@@ -3195,6 +3464,16 @@ body {
   .lg\:mx-12 {
     margin-left: 3rem;
     margin-right: 3rem;
+  }
+
+  .lg\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .lg\:mx-4 {
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
 
   .lg\:mt-12 {
@@ -3259,6 +3538,14 @@ body {
 
   .lg\:mt-44 {
     margin-top: 11rem;
+  }
+
+  .lg\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
+  .lg\:mt-10 {
+    margin-top: 2.5rem;
   }
 
   .lg\:block {
@@ -3333,6 +3620,10 @@ body {
     width: 107%;
   }
 
+  .lg\:w-7\/12 {
+    width: 58.333333%;
+  }
+
   .lg\:max-w-max-content {
     max-width: 1232px;
   }
@@ -3351,6 +3642,16 @@ body {
 
   .lg\:max-w-xl {
     max-width: 36rem;
+  }
+
+  .lg\:translate-y-1\/2 {
+    --tw-translate-y: 50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .lg\:-translate-y-1\/2 {
+    --tw-translate-y: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .lg\:grid-cols-4 {
@@ -3470,6 +3771,22 @@ body {
     padding-left: 3rem;
   }
 
+  .lg\:pb-20 {
+    padding-bottom: 5rem;
+  }
+
+  .lg\:pt-20 {
+    padding-top: 5rem;
+  }
+
+  .lg\:pl-8 {
+    padding-left: 2rem;
+  }
+
+  .lg\:pt-36 {
+    padding-top: 9rem;
+  }
+
   .lg\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -3501,6 +3818,11 @@ body {
 
   .lg\:text-lg {
     font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
     line-height: 1.75rem;
   }
 }
@@ -3971,6 +4293,10 @@ body {
     margin-bottom: 0;
   }
 
+  .xl\:top-0 {
+    top: 0px;
+  }
+
   .xl\:z-0 {
     z-index: 0;
   }
@@ -4032,6 +4358,10 @@ body {
     margin-bottom: 0px;
   }
 
+  .xl\:ml-8 {
+    margin-left: 2rem;
+  }
+
   .xl\:block {
     display: block;
   }
@@ -4066,6 +4396,10 @@ body {
 
   .xl\:w-6\/12 {
     width: 50%;
+  }
+
+  .xl\:w-5\/12 {
+    width: 41.666667%;
   }
 
   .xl\:max-w-\[420px\] {
@@ -4152,5 +4486,15 @@ body {
 
   .\32xl\:pb-\[5rem\] {
     padding-bottom: 5rem;
+  }
+
+  .\32xl\:pt-60 {
+    padding-top: 15rem;
+  }
+
+  @media (min-width: 1024px) {
+    .\32xl\:lg\:w-3\/12 {
+      width: 25%;
+    }
   }
 }
